00-install/kustomize/namespace-labs.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: labs
  labels:
    name: labs
    # Pod Security Standards (PSS) - Restricted mode
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
